--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,8 +54,8 @@ services:
       kafka-topics --bootstrap-server kafka1:29092 --list
       
       echo -e 'Creating kafka topics'
-      kafka-topics --bootstrap-server kafka1:29092 --create --if-not-exists --topic AuthorizationStatusRequests --replication-factor 1 --partitions 1
-      kafka-topics --bootstrap-server kafka1:29092 --create --if-not-exists --topic AuthorizationStatusResponses --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka1:29092 --create --if-not-exists --topic AuthenticationRequests --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka1:29092 --create --if-not-exists --topic AuthenticationResponses --replication-factor 1 --partitions 1
       
       echo -e 'Successfully created the following topics:'
       kafka-topics --bootstrap-server kafka1:29092 --list
