--- a/transaction-service/src/main/resources/application.yml
+++ b/transaction-service/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: transaction-service
   kafka:
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_URL:localhost:9092}
     producer:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
