update [gitignore]: check more files should be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
+.gradle
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
 ### VS Code ###
 .vscode/
 
 ### Kotlin ###
 .kotlin
-
-### IntelliJ IDEA ###
-.idea
