--- a/authentication-service/src/main/resources/application.yml
+++ b/authentication-service/src/main/resources/application.yml
@@ -4,18 +4,16 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_URL:localhost:9092}
     producer:
-      bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      properties:
-        spring:
-          json:
-            add:
-              type:
-                headers: false
+
     consumer:
-      bootstrap-servers: localhost:9092
       group-id: authentication
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "com.chargepoint.common.event"
