--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,9 @@ services:
     environment:
       KAFKA_BOOTSTRAP_URL: kafka1:19092
     build:
-      context:
-        "./transaction-service"
+      context: .
+      args:
+        - SERVICE_NAME=transaction-service
     ports:
       - "8080:8080"
     networks:
@@ -85,8 +86,9 @@ services:
     environment:
       KAFKA_BOOTSTRAP_URL: kafka1:19092
     build:
-      context:
-        "./authentication-service"
+      context: .
+      args:
+        - SERVICE_NAME=authentication-service
     networks:
       - "challenge-net"
     depends_on:
